Squelette HTML des boutons burger, bouton FAQ et footer

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,9 +1,10 @@
 @import "vars";
 
-body {
-    background-color: $secondary-color;
+/* Boutons */
+.primary-button{
+
 }
 
-a {
-    color: $warm-color;
+.secondary-button{
+
 }
