--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,16 +2,4 @@
 
 {% block title %}Accueil{% endblock %}
 
-{% block body %}
-
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/wilder/Projet 3/lille_0919_PHP_enviroservices/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/wilder/Projet 3/lille_0919_PHP_enviroservices/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
-</div>
-{% endblock %}
+{% block body %}{% endblock %}
