Réalisation du css des éléments suivants : bouton menu, bouton faq, footer

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,10 +9,13 @@
     </head>
     <body>
         <header>
-            <img src="#" alt="logo bipbip" />
+            <p class="logo-bipbip"><img src="#" alt="logo bipbip" /></p>
             <nav>
-                <img src="/images/menu-burger.png" alt="menu burger" />
-                <div>
+                <div class="menu-burger">
+                    <img src="/images/menu-burger.png" alt="menu burger" />
+                    <p>Menu</p>
+                </div>
+                <div class="faq-button">
                     <p>FAQ</p>
                 </div>
             </nav>
