--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,4 +2,14 @@
 
 {% block title %}Accueil{% endblock %}
 
-{% block body %}{% endblock %}
+{% block body %}
+    <main>
+        <section>
+            <p>Bip-bip</p>
+            <p>rachète ton tèl et en fait </p>
+            <p>le 1er mobile </p>
+            <p>recyclé et connecté aux </p>
+            <p>bons plans de ta région</p>
+        </section>
+    </main>
+{% endblock %}
