--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -8,3 +8,87 @@
 .secondary-button{
 
 }
+
+/* HEADER NAV */
+header{
+  .logo-bipbip{
+    text-align : center;
+  }
+  nav{
+    display : flex;
+    justify-content: space-between;
+    .menu-burger{
+      display : flex;
+      flex-direction : column;
+      justify-content : center;
+      align-items: center;
+      border-radius : 50%;
+      width : 10vw;
+      min-width : 150px;
+      max-width : 150px;
+      height : 10vw;
+      min-height: 150px;
+      max-height : 150px;
+      background-color : $primary-color;
+      position : fixed;
+      right : 5vw;
+      bottom : 5vh;
+      img{
+        width : 35%;
+        margin-bottom : 2%;
+      }
+      p{
+        font-size : 1.6em;
+        color : white;
+        margin-top : 2%;
+      }
+    }
+    .faq-button{
+      display : flex;
+      justify-content : center;
+      align-items : center;
+      border-radius : 50%;
+      width : 10vw;
+      min-width : 150px;
+      max-width : 150px;
+      height : 10vw;
+      min-height: 150px;
+      max-height : 150px;
+      background-color : black;
+      position : fixed;
+      left : 5vw;
+      bottom : 5vh;
+      p{
+        color : white;
+        font-size : 2em;
+      }
+    }
+  }
+}
+
+/* FOOTER */
+footer {
+  background-color : $secondary-color;
+  .social-networks{
+    display : flex;
+    justify-content : space-around;
+    padding : 2%;
+    background-color : $primary-color;
+    img{
+      width : 150%;
+    }
+  }
+  .legal-section{
+    display : flex;
+    flex-direction : column;
+    justify-content : space-around;
+    align-items : center;
+    border-radius : 5% 5% 0 0;
+    padding : 2%;
+    a{
+      margin : 1%;
+      color : white;
+      text-decoration : none;
+    }
+  }
+}
