test css pour les primary button et secondary button

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,6 +10,9 @@
             <p>le 1er mobile </p>
             <p>recyclé et connecté aux </p>
             <p>bons plans de ta région</p>
+            <div>
+                <a href="#" class="secondary-button">test bouton</a>
+            </div>
         </section>
     </main>
 {% endblock %}
