--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -2,11 +2,35 @@
 
 /* Boutons */
 .primary-button{
-
+  background-color : $primary-color;
+  text-decoration : none;
+  font-size : 2.5em;
+  text-transform: uppercase;
+  color : white;
+  border-radius : 20px;
+  width : 40%;
+  display : block;
+  margin : auto;
+  margin-bottom: 2%;
+  margin-top : 2%;
+  padding : 3%;
+  text-align : center;
 }
 
 .secondary-button{
-
+  background-color : $secondary-color;
+  text-decoration : none;
+  font-size : 2.5em;
+  text-transform: uppercase;
+  color : white;
+  border-radius : 20px;
+  width : 40%;
+  display : block;
+  margin : auto;
+  margin-bottom: 2%;
+  margin-top : 2%;
+  padding : 3%;
+  text-align : center;
 }
 
 /* HEADER NAV */
@@ -89,6 +113,7 @@ footer {
       margin : 1%;
       color : white;
       text-decoration : none;
+      font-size : 1.2em;
     }
   }
 }
