test flèche bleue de la maquette accueil

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -33,6 +33,14 @@
   text-align : center;
 }
 
+.arrow-down{
+  width: 0;
+  height: 0;
+  border-right: 4rem solid transparent;
+  border-left: 4rem solid transparent;
+  border-top: 2rem solid $secondary-color;
+}
+
 /* HEADER NAV */
 header{
   .logo-bipbip{
