--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,9 +10,7 @@
             <p>le 1er mobile </p>
             <p>recyclé et connecté aux </p>
             <p>bons plans de ta région</p>
-            <div>
-                <a href="#" class="secondary-button">test bouton</a>
-            </div>
+            <div class="arrow-down"></div>
         </section>
     </main>
 {% endblock %}
