premiers essaie page home

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -1,3 +1,3 @@
-$primary-color: #f76c6c;
-$secondary-color: #f99797;
-$warm-color: #ffd64f;
+$primary-color: #f9b73e;
+$secondary-color: #219cab;
+$dark-color: #ffd64f;
