--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -10,8 +10,7 @@
     box-shadow : 0 10px 10px #9f9f9f;
     border-radius : 5px;
     width : 80%;
-    margin : auto;
-    margin-bottom : 8%;
+    margin : 8% auto;
     &:after{
         content : "";
         height : 0;
@@ -33,9 +32,17 @@
         text-align : center;
         font-weight : bold;
         font-size : 2.5em;
+        margin : 0;
     }
     p{
-        color : $secondary-color;
-        font-size : 1.5rem;
+        color : $primary-color;
+        text-align : center;
+        font-size : 1.2rem;
+        font-style : italic;
+        margin : 0 0 5% 0;
+    }
+    img{
+        display : block;
+        margin : 2% auto;
     }
 }
