--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,4 +1,5 @@
 @import "vars";
+@import "~bootstrap/scss/bootstrap";
 
 body {
     background-color: $secondary-color;
@@ -6,4 +7,16 @@ body {
 
 a {
     color: $warm-color;
+}
+
+h1{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#user {
+    text-align: center;
+    color: black;
+    margin-left: auto;
+    margin-right: auto;
 }
