--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -10,7 +10,7 @@
     box-shadow : 0 10px 10px #9f9f9f;
     border-radius : 5px;
     width : 80%;
-    margin : 8% auto;
+    margin : 12% auto;
     &:after{
         content : "";
         height : 0;
@@ -26,14 +26,18 @@
     }
 }
 
-.home-estimation{
+.home{
+    #app-download-title{
+        margin : 0;
+    }
     h3{
         color : $primary-color;
         text-align : center;
         font-weight : bold;
         font-size : 2.5em;
-        margin : 0;
+        margin : 5% 5%;
     }
+
     p{
         color : $primary-color;
         text-align : center;
@@ -41,8 +45,21 @@
         font-style : italic;
         margin : 0 0 5% 0;
     }
+
     img{
         display : block;
         margin : 2% auto;
+    }
+
+    article{
+        display : flex;
+        flex-direction : row;
+        flex-wrap : wrap;
+        justify-content : space-around;
+
+        img{
+            width : 25%;
+            margin : 5% 5%;
+        }
     }
 }
