--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,14 +2,14 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}{% endblock %}</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
     </head>
     <body>
         <header>
-            <p class="logo-bipbip"><img src="#" alt="logo bipbip" /></p>
+            <p class="logo-bipbip"><img src="/images/logo-bipbip.png" alt="logo bipbip" /></p>
             <nav>
                 <div class="menu-burger">
                     <img src="/images/menu-burger.png" alt="menu burger" />
