--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,5 +1,5 @@
-@import url("https://p.typekit.net/p.css?s=1&k=xdq8cqe&ht=tk&f=9727.9728.9729&a=26360072&app=typekit&e=css");
 @import "vars";
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 
 /* Boutons */
 .primary-button{
@@ -11,9 +11,7 @@
     border-radius : 20px;
     width : 40%;
     display : block;
-    margin : auto;
-    margin-bottom: 2%;
-    margin-top : 2%;
+    margin : 2% auto;
     padding : 3%;
     text-align : center;
 }
@@ -27,16 +25,14 @@
     border-radius : 20px;
     width : 40%;
     display : block;
-    margin : auto;
-    margin-bottom: 2%;
-    margin-top : 2%;
+    margin : 2% auto;
     padding : 3%;
     text-align : center;
 }
 
 /* GENERAL */
 body{
-    font-family: 'Quicksand', Arial sans-serif;
+    font-family: 'co-headline', Arial sans-serif;
 }
 
 /* HEADER NAV */
@@ -130,7 +126,6 @@ footer {
             color : white;
             text-decoration : none;
             font-size : 1.4em;
-            font-family: 'Quicksand', Arial sans-serif;
         }
     }
 }
