--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -34,6 +34,33 @@ body{
     font-family: 'co-headline', Arial sans-serif;
 }
 
+.primary-title{
+    position : relative;
+    text-transform : uppercase;
+    font-size : 3rem;
+    color : $secondary-color;
+    text-align : center;
+    padding : 2%;
+    box-shadow : 0 10px 10px #9f9f9f;
+    border-radius : 5px;
+    width : 80%;
+    margin : 12% auto;
+
+    &:after{
+        content : "";
+        height : 0;
+        width : 0;
+        position : absolute;
+        z-index : -1;
+        bottom : -2rem;
+        left : 40%;
+        text-align : center;
+        border-right: 80px solid transparent;
+        border-left: 80px solid transparent;
+        border-top: 30px solid $secondary-color;
+    }
+}
+
 /* HEADER NAV */
 header{
     .logo-bipbip{
