mise en place du carroussel pour l'accueil

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,6 +9,9 @@
 
 {% block body %}
     <main class="home">
+
+        {{ include('/home/slide.html.twig') }}
+
         <section class="steps">
             <h2 class="primary-title" >Cash - Rapide - Rentable</h2>
         </section>
