--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,15 +11,14 @@
     <body>
         <header>
             <p class="logo-bipbip"><img src="/images/logo-bipbip.png" alt="logo bipbip" /></p>
-            <nav>
-                <div class="menu-burger">
-                    <img src="/images/menu-burger.png" alt="menu burger" />
-                    <p>Menu</p>
-                </div>
-                <div class="faq-button">
-                    <p>FAQ</p>
-                </div>
-            </nav>
+            {% include 'burger_menu.html.twig' %}
+            <div class="menu-burger">
+                <img src="/images/menu-burger.png" alt="menu burger" />
+                <p>Menu</p>
+            </div>
+            <div class="faq-button">
+                <p>FAQ</p>
+            </div>
         </header>
 
         {% block body %}
