--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,12 +12,14 @@
         <header>
             <p class="logo-bipbip"><img src="/images/logo-bipbip.png" alt="logo bipbip" /></p>
             {% include 'burger_menu.html.twig' %}
-            <div class="menu-burger">
-                <img src="/images/menu-burger.png" alt="menu burger" />
-                <p>Menu</p>
-            </div>
-            <div class="faq-button">
-                <p>FAQ</p>
+            <div class="circle-buttons">
+                <div class="menu-burger">
+                    <img src="/images/menu-burger.png" alt="menu burger" />
+                    <p>Menu</p>
+                </div>
+                <div class="faq-button">
+                    <p>FAQ</p>
+                </div>
             </div>
         </header>
 
