--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -6,7 +6,6 @@
 
 {% block body %}
     <h1 class="primary-title">Créer ton profil</h1>
-
     {{ include('user/_form.html.twig') }}
-
+    <a class="text-center primary-button" href="/">Retour à l'acceuil</a>
 {% endblock %}
