--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,30 @@
         {% endblock %}
 
         <footer>
+            <h2 class="primary-title">Plus d'infos</h2>
+            <ul>
+                <li><a href="#" title="Page qui-sommes-nous">Qui sommes-nous ?</a></li>
+                <li><a href="#" title="Revendre ton tèl">Revendre ton tèl</a></li>
+                <li><a href="#" title="Offre étudiants">Offre étudiants</a></li>
+                <li><a href="#" title="On recrute">On recrute</a></li>
+                <li><a href="#" title="Presse Kit">Presse Kit</a></li>
+                <li><a href="#" title="Devenir organisateur de collecte">Tu veux devenir organisateur de collecte</a></li>
+                <li><a href="#" title="Collectes et évènements">Collectes et évènements</a></li>
+                <li><a href="#" title="FAQ">Besoin d'aide ?</a></li>
+                <li><a href="#" title="Paiement">Paiement</a></li>
+                <li><a href="#" title="Livraison">Livraison</a></li>
+                <li>Ce que l'on oublie de lire (
+                    <a href="#" title="Conditions Générales de Vente">CGV</a>
+                     -
+                    <a href="#" title="Conditions Générales d'Utilisation">CGU</a>
+                     -
+                    <a href="#" title="Protection des données">Protections des données</a>
+                     -
+                    <a href="#" title="Cookies">Cookies</a>
+                     -
+                    <a href="#" title="Mentions Légales">Mentions Légales</a>
+                </li>
+            </ul>
             <div class="social-networks">
                 <a href="#" title="Lien vers la page facebook">
                     <img src="/images/facebook.png" alt="logo de Facebook" />
@@ -34,13 +58,11 @@
                     <img src="/images/instagram.png" alt="logo d'Instagram" />
                 </a>
                 <a href="#" title="Lien vers le compte Twitter">
-                    <img src="/images/twitter.png" alt="logo de Twitter" />
+                    <img src="/images/linkedin.png" alt="logo de Twitter" />
                 </a>
-            </div>
-            <div class="legal-section">
-                <a href="#" title="Lien vers les mentions légales">Mentions Légales</a>
-                <a href="#" title="Lien vers les paramètres de cookies">Cookies</a>
-                <a href="#" title="Lien vers les Conditions Générales d'Utilisation">Conditions Générales d'Utilisation</a>
+                <a href="#">
+                    <img src="/images/like.png" alt="Like" />
+                </a>
             </div>
         </footer>
 
