--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,28 +8,29 @@
 
 {% block body %}
     <main class="home">
+        <h1><span class="orange-font">Bipbip</span> <span class="blue-font">rachète ton tel et en fait</span> <span class="orange-font">le 1er mobile</span> <span class="blue-font"><b>recyclé et connecté aux</b></span> <span class="orange-font">bons plans de ta région</span></h1>
 
         {{ include('/home/slide.html.twig') }}
 
         <section class="steps">
-            <h1 class="primary-title" >Cash - Rapide - Rentable</h1>
+            <h2 class="primary-title" >Cash - Rapide - Rentable</h2>
         </section>
 
         <section class="home-estimation">
-            <h1 class="primary-title">A toi de jouer !</h1>
-            <h2 id="app-download-title">Télécharge l'appli</h2>
+            <h2 class="primary-title">A toi de jouer !</h2>
+            <h3 id="app-download-title">Télécharge l'appli</h3>
             <p>pour avoir une estimation précise</p>
             <a><img src="/images/app-store.png" alt="Lien vers l'applestore"/></a>
             <a><img src="/images/google-play.png" alt="Lien vers le Google Play"/></a>
-            <h2>Ou</h2>
+            <h3>Ou</h3>
             <a href="#" title="Lien vers l'estimation en ligne" class="secondary-button">Fais une estimation en ligne</a>
-            <h2>Tu décides de vendre ton tèl</h2>
+            <h3>Tu décides de vendre ton tèl</h3>
             <a href="#" title="Lien vers les points de collecte" class="secondary-button">Trouve un point de collecte</a>
         </section>
 
         <section class="home-partner">
-            <h1 class="primary-title">Ils nous font confiance</h1>
-            <h2>+ de 15 partenaires nous font confiance</h2>
+            <h2 class="primary-title">Ils nous font confiance</h2>
+            <h3>+ de 15 partenaires nous font confiance</h3>
             <a href="#" title="Lien vers la page partenaire">Rejoindre nos partenaires</a>
             <article>
                 <img src="/images/ilevia-logo.png" alt=""/>
@@ -39,7 +40,7 @@
         </section>
 
         <section class="contact">
-            <h1 class="primary-title">Contact</h1>
+            <h2 class="primary-title">Contact</h2>
             <a href="#" title="Lien vers la page contact">Contacte nous</a>
         </section>
     </main>
