Squelette HTML de la partie étapes de l'accueil. Mise en forme en CSS. Travail non terminé

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,29 +14,53 @@
 
         <section class="steps">
             <h2 class="primary-title">Cash - Rapide - Rentable</h2>
+
+            <article class="step1">
+                <div>
+                    <img src="/images/etape1.png">
+                    <h3>Etape 1</h3>
+                    <p>Découvre la valeur de ton tèl</p>
+                </div>
+                <a href="#" title="Lien vers l'application d'estimation" class="third-button">Télécharge l'appli Bipbip</a>
+                <div id="links-apps">
+                    <img src="/images/apple-store-mini.png" class="link-app">
+                    <img src="/images/google-play-mini.png" class="link-app">
+                </div>
+                <p>Si ton tèl est cassé, <a href="#" title="Lien vers l'estimation en ligne">fais une estimation en ligne</a></p>
+            </article>
+
+            <article class="step2">
+                <img src="/images/etape2.png">
+                <h3>Etape 2</h3>
+                <p>Prends RDV et rejoins nous</p>
+                <a href="#" title="Lien vers les points de collecte" class="primary-button">Trouve les points de collecte</a>
+            </article>
+
+            <article class="step3">
+                <img src="/images/etape3.png">
+                <img src="/images/pumpkin.png">
+                <h3>Etape 3</h3>
+                <p>Reçoit ton argent instantanément</p>
+                <a href="#" title="Lien vers l'application d'estimation" class="third-button">Télécharge l'appli Pumpkin</a>
+            </article>
+
         </section>
 
-        <section class="home-estimation">
-            <h2 class="primary-title">A toi de jouer !</h2>
-            <h3 id="app-download-title">Télécharge l'appli</h3>
-            <p>pour avoir une estimation précise</p>
-            <a><img src="/images/app-store.png" alt="Lien vers l'applestore"/></a>
-            <a><img src="/images/google-play.png" alt="Lien vers le Google Play"/></a>
-            <h3>Ou</h3>
-            <a href="#" title="Lien vers l'estimation en ligne" class="secondary-button">Fais une estimation en ligne</a>
-            <h3>Tu décides de vendre ton tèl</h3>
-            <a href="#" title="Lien vers les points de collecte" class="secondary-button">Trouve un point de collecte</a>
+        <section class="bail-bipbip">
+            <h2 class="primary-title">Le bon bail Bipbip</h2>
+            <a href="#">Teste un bipbip mobile</a>
+            <a href="#">Les bons plans de ta région</a>
         </section>
 
         <section class="home-partner">
             <h2 class="primary-title">Ils nous font confiance</h2>
             <h3>+ de 15 partenaires nous font confiance</h3>
-            <a href="#" title="Lien vers la page partenaire">Rejoindre nos partenaires</a>
             <article>
                 <img src="/images/ilevia-logo.png" alt=""/>
                 <img src="/images/jules-logo.png" alt=""/>
                 <img src="/images/yuka-logo.png" alt=""/>
             </article>
+            <a href="#" title="Lien vers la page partenaire" class="secondary-button">Rejoindre nos partenaires</a>
         </section>
 
         <section class="contact">
