--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -23,40 +23,61 @@
             }
         }
     }
-    #app-download-title{
-        margin : 0;
-    }
 
-    h3{
-        color : $primary-color;
-        text-align : center;
-        font-weight : bold;
-        font-size : 2.5em;
-        margin : 5% 5%;
-    }
-
-    p{
-        color : $primary-color;
-        text-align : center;
-        font-size : 1.2rem;
-        font-style : italic;
-        margin : 0 0 5% 0;
-    }
-
-    img{
-        display : block;
-        margin : 2% auto;
-    }
-
-    article{
-        display : flex;
-        flex-direction : row;
-        flex-wrap : wrap;
-        justify-content : space-around;
+/* STEPS */
+    .steps {
 
         img{
-            width : 25%;
-            margin : 5% 5%;
+            display : block;
+            margin : auto;
+            width : 75%;
+        }
+
+        .step1{
+            div{
+                position : relative;
+                margin-left : 3%;
+
+                h3{
+                    position : absolute;
+                    left : 35%;
+                    top : 45%;
+                    font-size : 4rem;
+                    color : white;
+                }
+
+                p{
+                    position : absolute;
+                    left : 22%;
+                    top : 65%;
+                    text-transform : uppercase;
+                    font-size : 2.5rem;
+                    text-align : center;
+                    width : 50%;
+                }
+            }
+
+            #links-apps{
+                display : flex;
+                justify-content : center;
+                margin-top : 5%;
+
+                img{
+                    width : 15%;
+                    margin : 3%;
+                }
+            }
+
+            p{
+                width : 50%;
+                margin : 3% auto;
+                text-align : center;
+                font-size : 2rem;
+
+                a{
+                    text-decoration: underline;
+                }
+            }
         }
     }
 }
