faq 1ere mise en page

--- a/assets/scss/faq.scss
+++ b/assets/scss/faq.scss
@@ -3,39 +3,30 @@
 
 // customize some Bootstrap variables
 $primary: darken(#428bca, 20%);
-
 // the ~ allows you to reference things in node_modules
-.primary-title{
-    display: flex;
-    justify-content: center;
-}
 
 .question, .question ul {
-    margin-right: 10%;
     padding:0;
     list-style:none;
-    width:100%; /* seule ligne rajoutée */
+    width:100%;
 }
-
-.question li {
+.question article {
     position: relative;
 }
-
 .question a {
     display:block;
     text-decoration: none;
 }
-
-.question ul {
+.card-text {
     position: absolute;
     left:-999em;
 }
-
-.question:hover li ul {
-    top: -10px;
+.question:hover article li {
+    top: 15px;
     left: 30%;
     z-index: 1;
     padding: 20px;
-    max-width: 75%;
+    width: 80%;
 }
+
 
